[package]
name = "twenty-two-port-connection"
version = "0.6.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
aes-gcm = "0.11.0-rc.3"
argon2 = "0.5.3"
rand = "0.8"
rpassword = "7"
arboard = "3"
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hkdf = "0.12"
